@@ -867,6 +867,12 @@ int main(int argc, char **argv) {
     if (Modes.interactive) {signal(SIGWINCH, sigWinchCallback);}
 #endif
 
+    if (Modes.mode_ac && Modes.oversample) {
+        fprintf(stderr,
+                "Warning: --modeac is currently ignored when --oversample is used;\n"
+                "         no ModeA/C messages will be decoded.\n");
+    }
+
     // Initialization
     modesInit();
 
